--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   dio: ^5.4.0
   get: ^4.6.6
   google_fonts: ^6.1.0
+  lottie: ^2.7.0
+
   flutter:
     sdk: flutter
 
@@ -23,3 +25,4 @@ flutter:
 
   assets:
     - assets/404.png
+    - assets/HomeAnimation.json
