--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dev_dependencies:
   integration_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  test: ^1.24.9
+  mockito: ^5.4.3
+  build_runner: ^2.4.7
 
 flutter:
   uses-material-design: true
